# contract_ai

./: .env  pyproject.toml
input1/: 示例.json  示例2.json
output/: 示例.md  示例2.md
src/: contract_manager.py  langchain_contract_manager.py  model_manager.py  singleton.py
templates/: 《数据提供合同（示范文本）》（GF-2025-2615）.docx  《赠与合同（示范文本）》（GF—2025—1301）.docx  房屋建筑和市政基础设施项目工程建设全过程咨询服务合同示范文本(2).doc  物联网流量合同.md  购售电合同示范文本 GF-2021-0511.doc
util/: PandocSettings.py
